<resources>
    <string name="app_name">My Application</string>
    <string name="type_anything">Type Anthing</string>
    <string name="button">Button</string>
    <string name="dummy">Dummy</string>
    <string name="add_or_subtract">Add or Subtract</string>
    <string name="add_1">Add 1</string>
    <string name="sub_1">SUB 1</string>
    <string name="_0">0</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="click">click</string>

    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>

    </string-array>

    <string name="welcome_messages">Hello, %1$s! You have &lt;b>%2$d new messages&lt;/b>.</string>
    <string name="send">SEND</string>


</resources>
